Fixed the white space issue

--- a/main.css
+++ b/main.css
@@ -1,14 +1,19 @@
 
+
 html{
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
 }
 
 
 body{
+    height: 100%;
     padding: 0;
-    margin: 0 auto; 
+    margin: 0; 
     max-width: 100%;
+    overflow:scroll;
+   
 
 }
 #logo{
@@ -41,38 +46,47 @@ header{
 
 /*CSS that affects the main section banner*/
 #banner{  
-    min-height: 400px;
-    background: url('yeeee.svg')no-repeat center;
-    background-size: 100%;
-    height: 60%;
-    display: block;
-    border: 3px solid red;
-}
-/* Dont need for now
-#banner-image{   
-    background:url('yeeee.svg') no-repeat center;
-    position: absolute;
-    margin-top: 5%;
-    height:60%;
-    width: 100%;
-    background-size: 100%;
-    min-height: 200px;
-}*/
-
-/*.text{
-    border: 5px solid black;
-    width:70%;
-    height: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50%;
     text-align: center;
-    max-width: 100%;
-}*/
-    .text{
-        margin-top: 0;
-        min-height: 10%;
-       text-align: center;
-       border: 5px solid black;
-    }
+    min-height: 500px;
+    background: url('yay.svg')no-repeat center;
+    background-size: cover;
+}
+
+#newsletter{
+    position: relative;
+    height:50px;
+    width: 100%;
+    margin-top:0;
+    background-color:grey;
+}
+    /*Removes that gap between the banner and the newsletter*/
+#newsletter h2{
+    margin-top: 0;
+    float: left;
+    padding:20px;
+}
+
+    #newsletter form{
+    margin-top:0;
+    float: right;
+    padding: 20px;
+}
+    
+
+.text{
+    margin-top: 5%;
+    min-height: 10%;
+    text-align: center;
+}
+
+.city-space{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
   
+    .container{
+        width:80%;
+        margin:auto;
+        overflow:hidden;
+      }
